@startuml
'https://plantuml.com/class-diagram
abstract class Game
{
+{abstract}abstractAction():void
+Action():void
}
class EasyGame
{
+abstractAction():void
}
class NormalGame
{
+abstractAction():void
}
class HardGame
{
+abstractAction():void
}
Game<|--EasyGame
Game<|--NormalGame
Game<|--HardGame
@enduml